--- a/Metrol/help/Metrology.htm
+++ b/Metrol/help/Metrology.htm
@@ -6,7 +6,7 @@
   </head>
 
   <body>
-    <h1 align="left">Метрология
+    <h1>Метрология
 </h1>
     <p><img border="0" hspace="0" src="MainMetrol.png" width="522" height="365">
     </p>
