--- a/Help/help.htm
+++ b/Help/help.htm
@@ -1,22 +1,151 @@
 ﻿<!DOCTYPE HTML PUBLIC "-//IETF//DTD HTML//EN">
 <html><head><title>help
-</title></head><body>
-<h1>Введение<br>
-
-
-
+</title></head><body ms_positioning="GridLayout">
+    <blockquote style="MARGIN-RIGHT: 0px" dir="ltr">
+<h1 align="left">Введение
 </h1>
-<p><a href="Delay.htm">керкнрекглшлдро нро7е86шл7л </a>
+<h2 align="left">Окно программы
+</h2>
+    </blockquote>
+        <p align="left"><font color="#3333ff"><u><strong><img border="0" hspace="40" align="top" src="MainForm.png" width="683" height="514">
+          </strong>
+        </u>Рис.1
+      </font></p>
+    <ol>
+    <ol>
+      <li>основное меню
+</li>
+      <li>панель кнопок
+</li>
+      <li>панель кнопок с&nbsp;показанными подписями
+</li>
+      <li>панель статуса
+</li>
+      <li>область вкладок
+</li>
+      <li>-&nbsp;&nbsp; &nbsp;8.&nbsp; области прицепления дочерних окон
+</li></ol>
+    <dl>
+    <dl>
+      <dt>
+<h2>Oсновное меню
+</h2></dt>
+    </dl></dl>
+<p><img border="0" hspace="40" src="file:///C:/XE/Projects/Device2/Help/Menu.File.Screen%20.png" width="377" height="179" align="left"><font color="#3333ff" size="3">Рис.2</font>
+      <img border="0" hspace="40" src="file:///C:/XE/Projects/Device2/Help/Menu.Show.Err%20.png" width="406" height="144" align="top"><font color="#3333ff" size="3">Рис.3</font>
+</p>
+<h2>
+</h2>
+    <blockquote style="MARGIN-RIGHT: 0px" dir="ltr">
+<p><strong>Подменю основного меню (</strong><a href="MainForm.png"><strong>Рис.1</strong>
+        </a><strong>&nbsp;- 1)&nbsp;программы</strong>
+</p>
+<p><strong>[Файл]&nbsp; [Рабочий Стол]&nbsp; (Рис.2)</strong>
+</p>
+    </blockquote>
+    <ul>
+      <li>
+<div><strong>[Сохранить]</strong> - Сохранение текущего состояния экрана и всех дочерних&nbsp;окон с их элементами управления. При выходе из программы, если экран был изменен и не сохранен, диалога о сохранении рабочего стола не будет и изменения экрана будут потеряны.
+</div>
+      </li>
+      <li>
+<div><strong>[Перезагрузить]</strong> - &nbsp;Возврвт к последнему сохраненному рабочему столу
+</div>
+      </li>
+    </ul>
+    <blockquote style="MARGIN-RIGHT: 0px" dir="ltr">
+<p>При открытии программы загружается последнее сожраненное&nbsp;состояния экрана, если программа открывается с параметром -nl то загрузки сохраненного экрана не будет.
+</p>
+<p><strong>[Показать]&nbsp; (Рис.3) </strong>
+</p>
+<p>Подменню создают и открывают новые или показывают скрытые созданные окна.
+</p>
+    </blockquote>
+<p dir="ltr">
+      <img border="0" hspace="40" src="file:///C:/XE/Projects/Device2/Help/Menu.Window.ShowHiden%20.png" width="447" height="148" align="top"><font color="#3333ff">Рис.4</font>
+</p>
+    <blockquote style="MARGIN-RIGHT: 0px" dir="ltr">
+      <p><strong>[Окна] (Рис.4)</strong>
+      </p>
+    </blockquote>
+    <ul dir="ltr">
+      <li><strong>[показать скрытые и обновить кнопки]</strong> -&nbsp;показывает скрытые элементы основного меню и&nbsp;&nbsp;панелей кнопок, пересчитывает размеры этих панелей <strong>(Рис.4-1)</strong>
+      </li>
+      <li>&nbsp;подменю ниже&nbsp;<strong>(Рис.4-2) </strong>показывают скрытые окна<strong>&nbsp;</strong>&nbsp;
+      </li>
+    </ul>
+    <dl>
+    <dl>
+      <dt>
+<h2>Панели кнопок
+</h2></dt>
+    </dl></dl>
+    <blockquote style="MARGIN-RIGHT: 0px" dir="ltr">
+<p>Панели кнопок дублируют для быстрого запуска некоторые элементы основного меню.
+</p>
+    </blockquote>
+    <dl>
+    <dl>
+      <dt>
+<h2>Панель статуса
+</h2></dt>
+    </dl></dl>
+    <blockquote style="MARGIN-RIGHT: 0px" dir="ltr">
+<p>Имеет две области текста (смотри: <a href="Delay.htm">Задержка</a>,&nbsp;<a href="Project.htm">Проект</a>)
+</p>
+    </blockquote>
+    <dl>
+    <dl>
+      <dt>
+<h2>Области основного окна
+</h2></dt>
+    </dl></dl>
+    <ul>
+      <li>
+<div>область вкладок <strong>(Рис.1-5)</strong>
+</div>
+      </li>
+      <li>
+<div>область прицепления дочерних окон<strong> (Рис.1 6-8)</strong>
+</div>
+      </li>
+    </ul>
+      <dt>
+<h2>&nbsp;
+</h2></dt>
+      <dt>
+<h2>&nbsp;
+</h2>
+<h1>&nbsp;
+</h1>
+<p style="MARGIN-RIGHT: 0px" dir="ltr" align="left">&nbsp;
+</p>
+<p style="MARGIN-RIGHT: 0px" dir="ltr" align="left">
+      <img border="0" hspace="0" src="Menu.Forms.png" width="611" height="361">
+
+
+
+
 
 
 </p>
-<p>&nbsp;
+<p style="MARGIN-RIGHT: 0px" dir="ltr" align="left">
+      <img border="0" hspace="0" src="Forms.dock.png" width="501" height="299">
+
+
+
+
 
 
 </p>
-<p>&nbsp;
+<p style="MARGIN-RIGHT: 0px" dir="ltr" align="left"><a href="Delay.htm">керкнрекглшлдро нро7е86шл7л
+</a>
 
 
-</p>
+
+
+
+
+</p></dt>
 
 </body></html>
