--- a/Help/help.htm
+++ b/Help/help.htm
@@ -2,15 +2,14 @@
 <html><head><title>help
 </title></head><body ms_positioning="GridLayout">
     <blockquote style="MARGIN-RIGHT: 0px" dir="ltr">
-<h1 align="left">Введение
+<h1 align="left">&nbsp;&nbsp;&nbsp; Введение
 </h1>
-<h2 align="left">Окно программы
+<h2 align="left">&nbsp;&nbsp;&nbsp;&nbsp; Окно программы
 </h2>
     </blockquote>
-        <p align="left"><font color="#3333ff"><u><strong><img border="0" hspace="40" align="top" src="MainForm.png" width="683" height="514">
-          </strong>
+        <p align="left"><font color="#3333ff">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <u><strong><img border="0" hspace="40" align="top" src="MainForm.png" width="683" height="514"></strong>
         </u>Рис.1
-      </font></p>
+</font></p>
     <ol>
     <ol>
       <li>основное меню
@@ -31,48 +30,64 @@
 <h2>Oсновное меню
 </h2></dt>
     </dl></dl>
-<p><img border="0" hspace="40" src="file:///C:/XE/Projects/Device2/Help/Menu.File.Screen%20.png" width="377" height="179" align="left"><font color="#3333ff" size="3">Рис.2</font>
-      <img border="0" hspace="40" src="file:///C:/XE/Projects/Device2/Help/Menu.Show.Err%20.png" width="406" height="144" align="top"><font color="#3333ff" size="3">Рис.3</font>
+<p><img border="0" hspace="40" src="file:///C:/XE/Projects/Device2/Help/Menu.File.Screen%20.png" width="377" height="179" align="left"><font color="#3333ff" size="3">Рис.2
+</font>
+      <img border="0" hspace="40" src="file:///C:/XE/Projects/Device2/Help/Menu.Show.Err%20.png" width="406" height="144" align="top"><font color="#3333ff" size="3">Рис.3
+</font>
 </p>
 <h2>
 </h2>
     <blockquote style="MARGIN-RIGHT: 0px" dir="ltr">
-<p><strong>Подменю основного меню (</strong><a href="MainForm.png"><strong>Рис.1</strong>
-        </a><strong>&nbsp;- 1)&nbsp;программы</strong>
+<p><strong>
+</strong>&nbsp;
 </p>
-<p><strong>[Файл]&nbsp; [Рабочий Стол]&nbsp; (Рис.2)</strong>
+<p><strong>Подменю основного меню (
+</strong><a href="MainForm.png"><strong>Рис.1
+</strong>
+        </a><strong>&nbsp;- 1)&nbsp;программы
+</strong>
+</p>
+<p><strong>[Файл]&nbsp; [Рабочий Стол]&nbsp; (Рис.2)
+</strong>
 </p>
     </blockquote>
     <ul>
       <li>
-<div><strong>[Сохранить]</strong> - Сохранение текущего состояния экрана и всех дочерних&nbsp;окон с их элементами управления. При выходе из программы, если экран был изменен и не сохранен, диалога о сохранении рабочего стола не будет и изменения экрана будут потеряны.
-</div>
-      </li>
+<div><strong>[Сохранить]
+</strong> - Сохранение текущего состояния экрана и всех дочерних&nbsp;окон с их элементами управления. При выходе из программы, если экран был изменен и не сохранен, диалога о сохранении рабочего стола не будет и изменения экрана будут потеряны.
+</div></li>
       <li>
-<div><strong>[Перезагрузить]</strong> - &nbsp;Возврвт к последнему сохраненному рабочему столу
+<div><strong>[Перезагрузить]
+</strong> - &nbsp;Возврвт к последнему сохраненному рабочему столу
 </div>
       </li>
     </ul>
     <blockquote style="MARGIN-RIGHT: 0px" dir="ltr">
 <p>При открытии программы загружается последнее сожраненное&nbsp;состояния экрана, если программа открывается с параметром -nl то загрузки сохраненного экрана не будет.
 </p>
-<p><strong>[Показать]&nbsp; (Рис.3) </strong>
+<p><strong>[Показать]&nbsp; (Рис.3)
+</strong>
 </p>
 <p>Подменню создают и открывают новые или показывают скрытые созданные окна.
 </p>
     </blockquote>
 <p dir="ltr">
-      <img border="0" hspace="40" src="file:///C:/XE/Projects/Device2/Help/Menu.Window.ShowHiden%20.png" width="447" height="148" align="top"><font color="#3333ff">Рис.4</font>
+      <img border="0" hspace="40" src="file:///C:/XE/Projects/Device2/Help/Menu.Window.ShowHiden%20.png" width="447" height="148" align="top"><font color="#3333ff">Рис.4
+</font>
 </p>
     <blockquote style="MARGIN-RIGHT: 0px" dir="ltr">
-      <p><strong>[Окна] (Рис.4)</strong>
+      <p><strong>[Окна] (Рис.4)
+</strong>
       </p>
     </blockquote>
     <ul dir="ltr">
-      <li><strong>[показать скрытые и обновить кнопки]</strong> -&nbsp;показывает скрытые элементы основного меню и&nbsp;&nbsp;панелей кнопок, пересчитывает размеры этих панелей <strong>(Рис.4-1)</strong>
-      </li>
-      <li>&nbsp;подменю ниже&nbsp;<strong>(Рис.4-2) </strong>показывают скрытые окна<strong>&nbsp;</strong>&nbsp;
-      </li>
+      <li><strong>[показать скрытые и обновить кнопки]
+</strong> -&nbsp;показывает скрытые элементы основного меню и&nbsp;&nbsp;панелей кнопок, пересчитывает размеры этих панелей <strong>(Рис.4-1)
+</strong></li>
+      <li>&nbsp;подменю ниже&nbsp;<strong>(Рис.4-2)
+</strong>показывают скрытые окна<strong>&nbsp;
+</strong>&nbsp;
+</li>
     </ul>
     <dl>
     <dl>
@@ -83,6 +98,8 @@
     <blockquote style="MARGIN-RIGHT: 0px" dir="ltr">
 <p>Панели кнопок дублируют для быстрого запуска некоторые элементы основного меню.
 </p>
+<p>&nbsp;&nbsp;&nbsp;&nbsp; Если пользователь опытный, основное меню и панели кнопок можно настроить вручную нажав комбинацию&nbsp;клавиш Ctrl+Shift+F6.
+</p>
     </blockquote>
     <dl>
     <dl>
@@ -91,7 +108,9 @@
 </h2></dt>
     </dl></dl>
     <blockquote style="MARGIN-RIGHT: 0px" dir="ltr">
-<p>Имеет две области текста (смотри: <a href="Delay.htm">Задержка</a>,&nbsp;<a href="Project.htm">Проект</a>)
+<p>Имеет две области текста (смотри: <a href="Delay.htm">Задержка
+</a>,&nbsp;<a href="Project.htm">Проект
+</a>)
 </p>
     </blockquote>
     <dl>
@@ -102,44 +121,55 @@
     </dl></dl>
     <ul>
       <li>
-<div>область вкладок <strong>(Рис.1-5)</strong>
-</div>
-      </li>
+<div>область вкладок <strong>(Рис.1-5)&nbsp;
+</strong>
+
+
+
+</div></li>
       <li>
-<div>область прицепления дочерних окон<strong> (Рис.1 6-8)</strong>
+<div>область прицепления дочерних окон<strong> (Рис.1 6-8)
+</strong>
+
+
+
 </div>
       </li>
     </ul>
+    <ol>
       <dt>
-<h2>&nbsp;
+<h2>Дочерние окна
 </h2></dt>
+    </ol></ol>
+    <blockquote style="MARGIN-RIGHT: 0px" dir="ltr">
+      <blockquote style="MARGIN-RIGHT: 0px" dir="ltr">
+<p>При нажатии правой кнопкой мышки на область заголовка окна<strong> (Рис.5)
+</strong> все дочерние окна имеют стандартное всплывающее меню.
+</p>
+<p><strong>[Закрыть Окно]
+</strong>&nbsp;полностью закрывает дочернее окно.
+</p>
+<p>При нажатии крестика в правом верхнем углу окна&nbsp; <strong>(Рис.5, Рис.6-2)
+</strong> окно скрывается при этом появляется меню <strong>(Рис.4-2) в [Окна]
+</strong> для показа этого скрытого окна.&nbsp;
+</p>
+      </blockquote>
+    </blockquote>
+    <ol>
       <dt>
-<h2>&nbsp;
+<h2>
+      <img border="0" hspace="40" src="Menu.Forms.png" width="611" height="361" align="top"><font color="#3333ff">Рис.5
+</font>
 </h2>
-<h1>&nbsp;
-</h1>
-<p style="MARGIN-RIGHT: 0px" dir="ltr" align="left">&nbsp;
-</p>
-<p style="MARGIN-RIGHT: 0px" dir="ltr" align="left">
-      <img border="0" hspace="0" src="Menu.Forms.png" width="611" height="361">
-
-
-
-
-
-
-</p>
-<p style="MARGIN-RIGHT: 0px" dir="ltr" align="left">
-      <img border="0" hspace="0" src="Forms.dock.png" width="501" height="299">
-
-
-
-
-
-
-</p>
-<p style="MARGIN-RIGHT: 0px" dir="ltr" align="left"><a href="Delay.htm">керкнрекглшлдро нро7е86шл7л
-</a>
+    <ol>
+      <dt>
+<p style="MARGIN-RIGHT: 0px" dir="ltr" align="left"><strong>[Вкладка]
+</strong> Дочернее окно прикрепляется к главному как вкладка или отцепляется от главного окна если дочернее окно уже вкладка <strong>(Рис.1-5)
+</strong>.
+</p></dt>
+      <dt>
+<p style="MARGIN-RIGHT: 0px" dir="ltr" align="left"><strong>[Закрепляемое]
+</strong>Разрешает, запрещает зацепляться дочерним окнам.
 
 
 
@@ -147,5 +177,118 @@
 
 
 </p></dt>
+    </ol></dt>
+      <dt>
+<p style="MARGIN-RIGHT: 0px" dir="ltr" align="left">
+      <img border="0" hspace="40" src="Forms.dock.png" width="501" height="299" align="top"><font color="#3333ff">Рис.6
+</font>
+
+
+
+
+
+
+</p>
+      <blockquote style="MARGIN-RIGHT: 0px" dir="ltr">
+<p style="MARGIN-RIGHT: 0px" dir="ltr" align="left"><strong>Автоскрытие.
+</strong> Если дочернее окно прицнплено к главному окну то при нажатии на кнопку <strong>(Рис.6-1)
+</strong>окно сворачивается в иконку <strong>(Рис.6-3)
+</strong>если мышка движется в области иконки то дочернее окно разворачивается.
+</p>
+      </blockquote></dt>
+      <dt>
+      <blockquote style="MARGIN-RIGHT: 0px" dir="ltr">
+<p style="MARGIN-RIGHT: 0px" dir="ltr" align="left">Дочерние окна кроме вкладок&nbsp;могут прицеплять к себе другие дочерние окна.
+
+
+
+
+
+
+</p>
+      </blockquote></dt>
+    <ol>
+      <dt>
+      <h2></h2>
+<h2 style="MARGIN-RIGHT: 0px" dir="ltr" align="left">Модульный принцип построения программы
+
+
+
+
+
+
+</h2></h2></dt>
+    </ol></ol>
+    <blockquote style="MARGIN-RIGHT: 0px" dir="ltr">
+      <blockquote style="MARGIN-RIGHT: 0px" dir="ltr">
+<p style="MARGIN-RIGHT: 0px">Содержимое основного меню и панелей кнопок меняется в зависимисти от подключенных модулей расширения программы, посмотреить и выбрать модули можно нажав комбинацию&nbsp;клавиш Ctrl+Shift+F7,только если&nbsp;ползователь опытный и понимает что делает.
+
+
+
+
+
+
+</p>
+<p style="MARGIN-RIGHT: 0px">Основные модули программы:&nbsp;Проект и&nbsp;Управление Проектом, Устройства Ввода Вывода и Приборы, Диалоги, Основные Окна:
+
+
+
+
+
+
+</p>
+<p style="MARGIN-RIGHT: 0px">Дополнительные Модули: Монитор Ввода Вывода, Метрология, Редактор приборов ПСК, загрузчик и т.д.
+
+
+
+
+
+
+</p>
+      </blockquote>
+    </blockquote>
+    <ol>
+      <dt>
+    <ol>
+      <dt>
+<h2 style="MARGIN-RIGHT: 0px" dir="ltr" align="left">Окно Исключений
+
+
+
+
+
+
+</h2></dt>
+    </ol>
+    <blockquote style="MARGIN-RIGHT: 0px" dir="ltr">
+      <blockquote style="MARGIN-RIGHT: 0px" dir="ltr">
+<p style="MARGIN-RIGHT: 0px"><img border="0" hspace="40" align="top" src="Forms.Exceptions.png" width="460" height="245">
+          <font color="#3333ff">Рис.7
+</font>
+
+
+
+
+
+
+</p>
+<p style="MARGIN-RIGHT: 0px">Ошибки возникаюшие в программе, так называемые исключения, могут возникать как из-за неверных действий пользователя, програмных ошибок (Сообщение о програмной ошибке как правило&nbsp;отображаются на английском языке, самое распространенное исключение&nbsp;Access violation)&nbsp;,&nbsp;аппаратных ошибок (ошибки связи)&nbsp;. По умолчанию, диалогового окна исключения&nbsp;не появлается, ошибки показываются в окне исключений с дополнительной отладочной информацией для исправления програмных ошибок разработчиком, содержимое окна исключений можно сохранить в файл, при нажатии правой кнопки мышки появляемся всплывающее меню (Рис7).&nbsp;&nbsp;. &nbsp;
+
+
+
+
+
+
+</p>
+<p style="MARGIN-RIGHT: 0px">&nbsp;&nbsp;
+
+
+
+
+
+
+</p>
+      </blockquote>
+    </blockquote></dt>
 
 </body></html>
