--- a/Help/Project/ReadRam.htm
+++ b/Help/Project/ReadRam.htm
@@ -135,32 +135,44 @@
 </p>
         <p>
       <img border="0" hspace="0" src="ReadRam.png" width="405" height="391">Рис2. <img border="0" hspace="0" src="ReadRam2.png" width="405" height="391">Рис3
-
 </p>
         <h3>Выбор диапазона данных
 
 </h3>
-        <p><font face="Calibri">Примерный диапазон записаных данных за время работы прибора выделен голубым или синим цветом. </font><font face="Calibri">При выборе диапазона считываемых данных нельзя <span style="mso-spacerun: yes">&nbsp;</span>чтобы<span style="mso-spacerun: yes">&nbsp; </span>левая<span style="mso-spacerun: yes">&nbsp; </span>граница данных была вне диапазона записаных данных
-      </font>
+        <p><font face="Calibri">Примерный диапазон записаных данных за время работы прибора выделен голубым или синим цветом.
+</font><font face="Calibri">При выборе диапазона считываемых данных нельзя <span style="mso-spacerun: yes">&nbsp;
+</span>чтобы<span style="mso-spacerun: yes">&nbsp;
+</span>левая<span style="mso-spacerun: yes">&nbsp;
+</span>граница данных была вне диапазона записаных данных
+</font>
 
 </p>
-        <p><font face="Calibri">Можно задать диапазон вручную:<span style="mso-spacerun: yes">&nbsp; </span>первая колонка – время относительно начала работы прибора , вторая колонка – время по компьютеру
-      </font>
+        <p><font face="Calibri">Можно задать диапазон вручную:<span style="mso-spacerun: yes">&nbsp;
+</span>первая колонка – время относительно начала работы прибора , вторая колонка – время по компьютеру
+</font>
 
 </p>
-        <p><font face="Calibri">Лучше считать данные за все время работы прибора т.к. вседа можно зкспортировать нужный отрезок.</font>
+        <p><font face="Calibri">Лучше считать данные за все время работы прибора т.к. вседа можно зкспортировать нужный отрезок.
+</font>
 
 </p>
         <h3>Считывание
 
 </h3>
-        <p>При нажатии на кнопку "Старт" начинается считывание памяти модуля,<span style="mso-bidi-font-family: Calibri; mso-bidi-theme-font: minor-latin"><span style="mso-list: Ignore"><span style="FONT: 7pt 'Times New Roman'">&nbsp;&nbsp; </span>
+        <p>При нажатии на кнопку "Старт" начинается считывание памяти модуля,<span style="mso-bidi-font-family: Calibri; mso-bidi-theme-font: minor-latin"><span style="mso-list: Ignore"><span style="FONT: 7pt 'Times New Roman'">&nbsp;&nbsp;
+</span>
         </span>
-      </span><font face="Calibri">если все нормально идет обновление линии прогресса,<span style="mso-spacerun: yes">&nbsp; </span>области статуса окна, считывание можно прервать вручную кнопка&nbsp;"Прервать".
-      </font>
+      </span><font face="Calibri">если все нормально идет обновление линии прогресса,<span style="mso-spacerun: yes">&nbsp;
+</span>области статуса окна, считывание можно прервать вручную кнопка&nbsp;"Прервать".
+</font>
+
 
 </p>
-        <p><font face="Calibri">По окончании считывания закрыть окно кнопка&nbsp;"Выход", затем можно приступать к считыванию памяти другого модуля на линии.</font>
+        <p><font face="Calibri">По окончании считывания закрыть окно кнопка&nbsp;"Выход", затем можно приступать к считыванию памяти другого модуля на линии.
+</font>
+
+</p>
+        <p><font face="Calibri"></font>
 
 </p>
 
