--- a/Help/Алгоритм Работы(Профилемер).htm
+++ b/Help/Алгоритм Работы(Профилемер).htm
@@ -447,6 +447,17 @@ style="FONT: 7pt 'Times New Roman'">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 <p class="MsoListParagraphCxSpMiddle" style="MARGIN-LEFT: 90pt"><img width="302"
 height="69" id="Рисунок 14" src="image022.png"></p>
 
+<p class="MsoListParagraphCxSpMiddle" style="MARGIN-LEFT: 90pt">&nbsp;</p>
+
+<p class="MsoListParagraphCxSpMiddle" style="MARGIN-LEFT: 90pt">5а. Если Вемя рабоы профилемера больше чем "Макс.Вр.Раб(Сут)",&nbsp;то установить больше вручную, открыть всплывающее меню окна управления устройствами</p>
+
+<p class="MsoListParagraphCxSpMiddle" style="MARGIN-LEFT: 90pt">
+        <img border="0" hspace="0" src="RamSize.png" width="452" height="244"></p>
+
+<p class="MsoListParagraphCxSpMiddle" style="MARGIN-LEFT: 90pt">&nbsp;</p>
+
+<p class="MsoListParagraphCxSpMiddle" style="MARGIN-LEFT: 90pt">&nbsp;</p>
+
 <p class="MsoListParagraphCxSpLast" style="MARGIN-LEFT: 90pt; TEXT-INDENT: -18pt">6.<span
 style="FONT: 7pt 'Times New Roman'">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 </span>Открыть окно чтения памяти &nbsp;В окне&nbsp; управления устройствами&nbsp; навести мышь на созданное устройство- <span lang="EN-US">Caliper
@@ -457,6 +468,7 @@ lang="EN-US">Calip
 
 <p class="MsoNormal">&nbsp;<img width="357" height="298" id="Рисунок 13"
 src="image023.png">
+
 
 </p>
 
@@ -476,6 +488,7 @@ id="Рисунок 26" src="image024.png"></p>
 style="FONT: 7pt 'Times New Roman'">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 </span>В ыбрать Диск <span lang="EN-US">SD
 </span>
+
 
 </p>
 
