--- a/Help/Project/Export.htm
+++ b/Help/Project/Export.htm
@@ -13,7 +13,7 @@
     <p>
       <img border="0" hspace="0" src="ExpMenu.png" width="332" height="148">Рис1
 </p>
-    <p>Данные комплекса преобразуются в формат ПСК6("MBK"), данные профилемера в&nbsp;формат "ap_pb" Рис2,3
+    <p>Данные комплекса преобразуются в формат К6("MBK"), данные профилемера в&nbsp;формат "ap_pb" Рис2,3
 </p>
     <p>
       <img border="0" hspace="0" src="ExpPSK6.png" width="311" height="274">Рис2 <img border="0" hspace="0" src="ExpAK1.png" width="305" height="314">Рис3
